[project]
name = "lsh"
version = "0.1.0"
description = "Locality Sensitive Hashing dependencies"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "line-profiler>=4.1.3",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pyqt5>=5.15.11",
    "pysubdisc>=0.1.1159",
    "scipy>=1.13.1",
    "tqdm>=4.66.5",
]
